--- a/.env
+++ b/.env
@@ -7,3 +7,9 @@
 DATABASE_URL="mongodb+srv://yaroslavv86:5rTGI2kh7nVHerIf@cluster0.mefe4dy.mongodb.net/test"
 NEXTAUTH_JWT_SECRET = "NEXT-JWT-SECRET"
 NEXTAUTH_SECRET = "NEXT-SECRET"
+
+GITHUB_ID=21b338bd3d0b5e0d704a
+GITHUB_SECRET=e796071326fbbed54ef592a05074c5761db7acc8 
+
+GOOGLE_CLIENT_ID=504927176205-ojqmpvlbn27fm0f6jq95cjgknk2g951f.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
